[gd_scene load_steps=7 format=3 uid="uid://d2kso2fxsgxs"]

[ext_resource type="Script" path="res://scenes/Test_scenes/beaker_test.gd" id="1_ug81o"]
[ext_resource type="Script" path="res://scenes/Test_scenes/color.gd" id="2_ucbng"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b34t8"]
size = Vector2(117.5, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_diip4"]
size = Vector2(161.5, 250)

[sub_resource type="LabelSettings" id="LabelSettings_7sj7y"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_5cpqm"]
font_size = 64

[node name="BeakerTest" type="Node2D"]
script = ExtResource("1_ug81o")

[node name="White" type="ColorRect" parent="."]
offset_left = 1041.0
offset_top = 276.0
offset_right = 1201.0
offset_bottom = 524.0

[node name="Main Beaker" type="ColorRect" parent="."]
offset_left = 1041.0
offset_top = 276.0
offset_right = 1201.0
offset_bottom = 524.0

[node name="GOAL BEAKER" type="ColorRect" parent="."]
offset_left = 1280.0
offset_top = 277.0
offset_right = 1403.0
offset_bottom = 522.0

[node name="Additive Colors" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -1.0
offset_right = 42.0
offset_bottom = 39.0

[node name="RED" type="ColorRect" parent="Additive Colors"]
layout_mode = 0
offset_left = 580.0
offset_top = 424.0
offset_right = 698.0
offset_bottom = 521.0
mouse_filter = 2
color = Color(1, 0, 0, 1)
script = ExtResource("2_ucbng")
color_additive = Color(1, 0, 0, 1)

[node name="Area" type="Area2D" parent="Additive Colors/RED"]
position = Vector2(79, 35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Additive Colors/RED/Area"]
position = Vector2(-19.75, 14)
shape = SubResource("RectangleShape2D_b34t8")

[node name="BLUE" type="ColorRect" parent="Additive Colors"]
layout_mode = 0
offset_left = 888.0
offset_top = 422.0
offset_right = 1006.0
offset_bottom = 522.0
mouse_filter = 2
color = Color(0, 0, 1, 1)
script = ExtResource("2_ucbng")
color_additive = Color(0, 0, 1, 1)

[node name="Area" type="Area2D" parent="Additive Colors/BLUE"]
position = Vector2(79, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Additive Colors/BLUE/Area"]
position = Vector2(-20, 15)
shape = SubResource("RectangleShape2D_b34t8")

[node name="GREEN" type="ColorRect" parent="Additive Colors"]
layout_mode = 0
offset_left = 729.0
offset_top = 426.0
offset_right = 847.0
offset_bottom = 523.0
mouse_filter = 2
color = Color(0, 1, 0, 1)
script = ExtResource("2_ucbng")
color_additive = Color(0, 1, 0, 1)

[node name="Area" type="Area2D" parent="Additive Colors/GREEN"]
position = Vector2(79, 36)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Additive Colors/GREEN/Area"]
position = Vector2(-19.75, 14)
shape = SubResource("RectangleShape2D_b34t8")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1120, 231)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.25, 167)
shape = SubResource("RectangleShape2D_diip4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Beaker Color" type="Label" parent="."]
offset_left = 1040.0
offset_top = 214.0
offset_right = 1203.0
offset_bottom = 265.0
text = "15165"
horizontal_alignment = 1

[node name="Goal Color" type="Label" parent="."]
offset_left = 1280.0
offset_top = 217.0
offset_right = 1403.0
offset_bottom = 295.0
text = "15165"
horizontal_alignment = 1

[node name="Color Difference" type="Label" parent="."]
offset_left = 1170.0
offset_top = 148.0
offset_right = 1276.0
offset_bottom = 199.0
text = "15165"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="."]
offset_left = 587.0
offset_top = 308.0
offset_right = 1064.0
offset_bottom = 383.0
text = "1.Pick up the different colors
2. Gold them over the left rectangle
3. Combine colors to match goal color
4. Win if you are under the goal difference. (Default 0.17)"

[node name="Arrow" type="Label" parent="."]
offset_left = 1187.0
offset_top = 325.0
offset_right = 1293.0
offset_bottom = 376.0
text = "⏩"
label_settings = SubResource("LabelSettings_7sj7y")
horizontal_alignment = 1

[node name="Success?" type="Label" parent="."]
offset_left = 1188.0
offset_top = 370.0
offset_right = 1294.0
offset_bottom = 458.0
text = "❌"
label_settings = SubResource("LabelSettings_5cpqm")
horizontal_alignment = 1

[node name="Empty Beaker" type="Button" parent="."]
offset_left = 1065.0
offset_top = 571.0
offset_right = 1181.0
offset_bottom = 603.0
text = "Empty Beaker
"

[node name="New Color Request" type="Button" parent="."]
offset_left = 1284.0
offset_top = 568.0
offset_right = 1400.0
offset_bottom = 600.0
text = "Get New Color
"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Empty Beaker" to="." method="_on_empty_beaker_pressed"]
[connection signal="pressed" from="New Color Request" to="." method="_on_new_color_request_pressed"]
